Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_datatable.yml
+++ b/.github/workflows/master_datatable.yml
@@ -42,23 +42,13 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: ASP-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_39B9726BB4B242099C478B106D0A215D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_63C1E2A01920445EA7C4070C603D8CDD }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F0300487446E48AA80C05BEDB01FD44D }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -66,4 +56,4 @@ jobs:
           app-name: 'DataTable'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F6349C8E82D040ADA94E9F405961E617 }}
